hphp/test/slow/reified_generics/verify-param-varray-1.php.expectf
yes
yes

Catchable fatal error: Argument 1 passed to f() must be an instance of HH\varray<int>, HH\vec given in %s on line 7
